fix wrap on edit alert icon

--- a/less/app.less
+++ b/less/app.less
@@ -249,6 +249,7 @@ section#the-goods { margin-top: 44px; }
                 margin-top: 5px;
                 margin-right: 11px;
             }
+            &:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
         }
     }
 
